# DAQP-EPAD-MODULES-SDK

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: CMakeSettings.cmake
daqp/C/: CMakeLists.txt
daqp/C/daqp-stg/: CMakeLists.txt  daqp-stg-example.c
daqp/CXX/: CMakeLists.txt
daqp/CXX/daqp-stg/: CMakeLists.txt  daqp-stg-example-cxx.cpp
epad/C/: CMakeLists.txt
epad/C/epad2-th8/: CMakeLists.txt  epad2-th8-example.c
epad/CXX/: CMakeLists.txt
epad/CXX/epad2-th8/: CMakeLists.txt  epad2-th8-example-cxx.cpp
ext/C/: CMakeLists.txt
ext/C/custom_serial_port/: CMakeLists.txt  custom-serial-port.c  orion-daq-serial-port.c  orion-dsa-serial-port.c
ext/CXX/: CMakeLists.txt
ext/CXX/custom_serial_port/: CMakeLists.txt  custom-serial-port-cxx.cpp  orion-daq-serial-port-cxx.cpp  orion-dsa-serial-port-cxx.cpp  orion_daq_serial_port.h  orion_dsa_serial_port.h
ext/orion_daq/: OrionDaq_api.c  OrionDaq_api.h
ext/orion_dsa/: OrionDsa_api.c  OrionDsa_api.h
modules_api/C/: CMakeLists.txt
modules_api/C/public/: dw_modules_c_command.h  dw_modules_c_core.h  dw_modules_c_custom_serial_port.h  dw_modules_c_error.h  dw_modules_exports.h  dw_modules_load.h
modules_api/CXX/: CMakeLists.txt
modules_api/CXX/inc/: dw_config.h  dw_if_module.h  dw_if_module_cxx.h  dw_if_modules_sim.h  dw_if_modules_sim_fwd.h  dw_module_cxx.h  dw_module_name_tupel.h  dw_modules_api_cxx.h  dw_modules_sim_cxx.h
modules_api/CXX/inc_sim/: dw_modules_sim.h
modules_api/CXX/lib/log/: CMakeLists.txt
modules_api/CXX/lib/log/inc/: uni_log.h  uni_logger.h
modules_api/CXX/lib/serial_port/: CMakeLists.txt
modules_api/CXX/lib/serial_port/inc/: sp_if_serial_port.h  sp_serial_port_enum.h  sp_serial_port_native.h  sp_serial_port_unix.h  sp_serial_port_util.h  sp_serial_port_windows.h
modules_api/CXX/lib/serial_port/src/: sp_serial_port_unix.cpp  sp_serial_port_windows.cpp
modules_api/CXX/lib/uni_base/inc/: uni_string_buffer.h
modules_api/CXX/serial_port/inc/: sp_if_serial_port_fwd.h  sp_serial_port_native.h  sp_serial_port_unix.h  sp_serial_port_util.h  sp_serial_port_windows.h
modules_api/CXX/serial_port/src/: sp_serial_port_enum_unix.cpp  sp_serial_port_enum_win32.cpp  sp_serial_port_unix.cpp  sp_serial_port_util.cpp  sp_serial_port_windows.cpp
modules_api/CXX/src/: dw_module_cxx.cpp  dw_module_cxx.h  dw_module_ids.h  dw_module_name_tupel.cpp  dw_modules_api_cxx.cpp  dw_modules_c_api.h  dw_modules_sim_cxx.cpp
modules_api/CXX/util/inc/: uni_log.h
modules_api/CXX/util/src/: uni_log.cpp
